--- a/libs/a11yc/css/a11yc.css
+++ b/libs/a11yc/css/a11yc.css
@@ -896,7 +896,9 @@ td.a11yc_table_check_howto {
 */
 .a11yc_table_check tr:hover th,
 .a11yc_table_check tr:hover td,
+.a11y-center_page_jwp-a11y-jwp_a11y_pages .a11yc_table tr:hover th,
 #a11yc_pages .a11yc_table tr:hover th,
+a11y-center_page_jwp-a11y-jwp_a11y_pages .a11yc_table tr:hover td,
 #a11yc_pages .a11yc_table tr:hover td  {
 	background-color: #fefedd;
 }
