--- a/libs/a11yc/css/a11yc.css
+++ b/libs/a11yc/css/a11yc.css
@@ -32,6 +32,12 @@
 .a11yc a:hover {
 	text-decoration: none;
 }
+#a11yc_docs li,
+#a11yc_checklist li,
+#a11yc_checklist p {
+	line-height: 1.5;
+	margin-bottom: .6em;
+}
 .a11yc code {
 	background-color: #ededed;
 	border: 1px solid #aaa;
@@ -143,7 +149,7 @@ p.a11yc_fr {
 .a11yc li+li {
 	margin-top: .75em;
 }
-#jwp_a11y_error ul li,
+#jwp-a11y_error ul li,
 {
 	list-style: disc;
 	margin-left: 2em;
@@ -482,8 +488,8 @@ table#a11yc_table_info {
 	background-color: #e6e6e6;
 	border-top: 1px solid #ccc;
 }
-.a11y-center_page_jwp_a11y-jwp_a11y_setup #wpfooter,
-.a11y-center_page_jwp_a11y-jwp_a11y_checklist #wpfooter {
+.a11y-center_page_jwp-a11y-jwp-a11y_setup #wpfooter,
+.a11y-center_page_jwp-a11y-jwp_a11y_checklist #wpfooter {
 	display: none;
 }
 #a11y_submit label[for="a11yc_done"] {
@@ -514,6 +520,9 @@ table#a11yc_table_info {
 	top: -4em;
 	right: 12px;
 }
+.a11y-center_page_jwp-a11y-jwp_a11y_checklist .postbox {
+	margin-top: 2.5em !important;
+}
 .a11yc_fixed_header #a11yc_header_ctrl {
 	position: relative;
 	top: 0;
@@ -521,11 +530,13 @@ table#a11yc_table_info {
 	float: right;
 }
 #a11yc_select_standard,
+#a11yc_selection_reason,
 .a11yc_narrow_level {
 	display: inline-block;
 	margin-left: 5px;
 }
-.a11yc_fixed_header #a11yc_select_standard {
+.a11yc_fixed_header #a11yc_select_standard,
+.a11yc_fixed_header #a11yc_selection_reason {
 	display: none;
 }
 .a11yc_narrow_level a {
@@ -898,7 +909,7 @@ td.a11yc_table_check_howto {
 .a11yc_table_check tr:hover td,
 .a11y-center_page_jwp-a11y-jwp_a11y_pages .a11yc_table tr:hover th,
 #a11yc_pages .a11yc_table tr:hover th,
-a11y-center_page_jwp-a11y-jwp_a11y_pages .a11yc_table tr:hover td,
+.a11y-center_page_jwp-a11y-jwp_a11y_pages .a11yc_table tr:hover td,
 #a11yc_pages .a11yc_table tr:hover td  {
 	background-color: #fefedd;
 }
